--- a/backend/package.json
+++ b/backend/package.json
@@ -5,20 +5,25 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "lint:fix": "eslint . --fix ",
+    "start": "npm run lint:fix && nodemon src/index.js",
+    "format": "prettier --write .",
+    "lint": "eslint . "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.17.2",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "eslint": "^9.33.0",
-    "globals": "^16.3.0"
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2"
   }
 }
