--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
