--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bull": "^4.16.5",
     "dotenv": "^17.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
     "nodemailer": "^7.0.6",
