--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/express": "^6.12.7",
     "bcrypt": "^6.0.0",
     "bull": "^4.16.5",
     "dotenv": "^17.2.1",
