--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.17.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
